# padel-tournaments

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .flake8  Dockerfile.worker  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_tournament_pairing_strategy.py
backend/app/: __init__.py  main.py  queues.py
backend/app/application/: __init__.py  auth_service.py  dto.py  organization_service.py  tournament_service.py
backend/app/core/: config.py  database.py  security.py
backend/app/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/api/: __init__.py  dependencies.py  schemas.py
backend/app/infrastructure/api/routes/: admin.py  auth.py  billing.py  blog.py  contact.py  organizations.py  tournaments.py
backend/app/infrastructure/persistence/: __init__.py  models.py  repositories.py
backend/app/infrastructure/sse/: __init__.py  broadcaster.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_contact.py  test_health.py  test_pairing.py
docs/: PRODUCTION_READINESS_AUDIT.md
frontend/: .env.example  .eslintrc.json  .prettierignore  README.md  instrumentation.ts  next.config.js  package-lock.json  package.json  sentry.client.config.ts  tailwind.config.ts
frontend/app/: global-error.tsx  globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/app/[locale]/admin/: AdminSettingsBlock.tsx  AdminStatsBlock.tsx  layout.tsx  page.tsx
frontend/app/[locale]/admin/settings/: page.tsx
frontend/app/[locale]/admin/stats/: page.tsx
frontend/app/[locale]/blog/: page.tsx
frontend/app/[locale]/blog/[slug]/: page.tsx
frontend/app/[locale]/collaboration/: page.tsx
frontend/app/[locale]/contact/: ContactForm.tsx  page.tsx
frontend/app/[locale]/faq/: FaqAccordion.tsx  page.tsx
frontend/app/[locale]/how-it-works/: page.tsx
frontend/app/[locale]/login/: page.tsx
frontend/app/[locale]/pricing/: ProCheckoutButton.tsx  page.tsx
frontend/app/[locale]/privacy/: page.tsx
frontend/app/[locale]/register/: page.tsx
frontend/app/[locale]/reviews/: page.tsx
frontend/app/[locale]/terms/: page.tsx
frontend/components/: Link.tsx
frontend/i18n/: request.ts  routing.ts
frontend/lib/: seo.ts
frontend/messages/: en.json  ru.json
